src/resource_exhaustion.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stress-pod
  namespace: default
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9100"
spec:
  containers:
  - name: stress
    image: progrium/stress
    args: ["--cpu", "2", "--vm", "1", "--vm-bytes", "1024M", "--timeout", "3600s"]
  - name: exporter
    image: prom/node-exporter:latest
    ports:
    - containerPort: 9100
